error.log
sh: 1: ./nom_du_fichier.py: not found
Traceback (most recent call last):
  File "./h.py", line 15, in <module>
    print (text);
UnicodeEncodeError: 'ascii' codec can't encode character '\xe9' in position 21: ordinal not in range(128)
Traceback (most recent call last):
  File "./h.py", line 15, in <module>
    print (text);
UnicodeEncodeError: 'ascii' codec can't encode character '\xe9' in position 21: ordinal not in range(128)
Traceback (most recent call last):
  File "./h.py", line 15, in <module>
    print (text);
UnicodeEncodeError: 'ascii' codec can't encode character '\xe9' in position 21: ordinal not in range(128)
Traceback (most recent call last):
  File "./h.py", line 15, in <module>
    print (text);
UnicodeEncodeError: 'ascii' codec can't encode character '\xe9' in position 21: ordinal not in range(128)
Traceback (most recent call last):
  File "./h.py", line 15, in <module>
    print (text);
UnicodeEncodeError: 'ascii' codec can't encode character '\xe9' in position 21: ordinal not in range(128)
sh: 1: ./h.py: Permission denied
Traceback (most recent call last):
  File "./whitelist.py", line 143, in <module>
    words =word_tokenize(text.lower(arg))
NameError: name 'text' is not defined
Traceback (most recent call last):
  File "./whitelist.py", line 143, in <module>
    words =word_tokenize(text.lower(arg))
NameError: name 'text' is not defined
Traceback (most recent call last):
  File "./publi.py", line 143, in <module>
    words =word_tokenize(text.lower(arg))
NameError: name 'text' is not defined
Traceback (most recent call last):
  File "./publi.py", line 143, in <module>
    words =word_tokenize(text.lower(arg))
NameError: name 'text' is not defined
Traceback (most recent call last):
  File "./publi.py", line 143, in <module>
    words =word_tokenize(text.lower(arg))
NameError: name 'text' is not defined
Traceback (most recent call last):
  File "./publi.py", line 143, in <module>
    words =word_tokenize(text.lower(arg))
NameError: name 'text' is not defined
Traceback (most recent call last):
  File "./publi.py", line 143, in <module>
    words =word_tokenize(text.lower(arg))
NameError: name 'text' is not defined
Traceback (most recent call last):
  File "./publi.py", line 143, in <module>
    words =word_tokenize(text.lower(arg))
NameError: name 'text' is not defined
Traceback (most recent call last):
  File "./publi.py", line 143, in <module>
    words =word_tokenize(text.lower(arg))
NameError: name 'text' is not defined
Traceback (most recent call last):
  File "./whitelist.py", line 151, in <module>
    print(correct)
NameError: name 'correct' is not defined
Traceback (most recent call last):
  File "./whitelist.py", line 150, in <module>
    correct.append(edits1(word))
  File "./whitelist.py", line 133, in edits1
    replaces   = [L + c + R[1:]           for L, R in splits if R for c in letters]
  File "./whitelist.py", line 133, in <listcomp>
    replaces   = [L + c + R[1:]           for L, R in splits if R for c in letters]
TypeError: can only concatenate list (not "str") to list
Traceback (most recent call last):
  File "./whitelist.py", line 149, in <module>
    fichier= open("frenchtest", mode="r")
FileNotFoundError: [Errno 2] No such file or directory: 'frenchtest'
Traceback (most recent call last):
  File "./whitelist.py", line 149, in <module>
    fichier= open("frenchtest", mode="r")
FileNotFoundError: [Errno 2] No such file or directory: 'frenchtest'
Traceback (most recent call last):
  File "./whitelist.py", line 138, in <module>
    fichier= open("frenchtest", mode="r")
FileNotFoundError: [Errno 2] No such file or directory: 'frenchtest'
Traceback (most recent call last):
  File "./whitelist.py", line 138, in <module>
    fichier= open("frenchtest", mode="r")
FileNotFoundError: [Errno 2] No such file or directory: 'frenchtest'
Traceback (most recent call last):
  File "./whitelist.py", line 149, in <module>
    fichier= open("frenchtest", mode="r")
FileNotFoundError: [Errno 2] No such file or directory: 'frenchtest'
Traceback (most recent call last):
  File "./whitelist.py", line 159, in <module>
    correct.append(known(word))
  File "./whitelist.py", line 141, in known
    words= word_tokenize(text.lower())
AttributeError: 'list' object has no attribute 'lower'
Traceback (most recent call last):
  File "./whitelist.py", line 159, in <module>
    correct.append(known(word))
  File "./whitelist.py", line 141, in known
    words= word_tokenize(text.lower())
AttributeError: 'list' object has no attribute 'lower'
Traceback (most recent call last):
  File "./whitelist.py", line 155, in <module>
    correct.append(known(word))
NameError: name 'word' is not defined
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
  File "./correct.py", line 153
    if(!(arg )):
       ^
SyntaxError: invalid syntax
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
  File "./correct.py", line 153
    new.append(l) // concat\xe9ner !!!!!!!!!!
                                ^
SyntaxError: invalid syntax
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
Traceback (most recent call last):
  File "./correct.py", line 160, in <module>
    correct.append(known(arg))
  File "./correct.py", line 141, in known
    for w in words:
NameError: name 'words' is not defined
Traceback (most recent call last):
  File "./correct.py", line 160, in <module>
    correct.append(known(arg))
  File "./correct.py", line 141, in known
    for w in words:
NameError: name 'words' is not defined
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 2: /: Permission denied
sh: 1: ./blacklist.py: Permission denied
sh: 1: ./blacklist.py: Permission denied
sh: 1: ./blacklist.py: Permission denied
